--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 <body>
 
   <header class="header">
-    <nav>
-      <ul class="navbar">
-        <li class="navbar__item"><a href="#">Modelos</a></li>
-        <li class="navbar__item"><a href="#">Promociones</a></li>
-        <li class="navbar__item"><a href="#">Servicios</a></li>
-        <li class="navbar__item"><a href="#">Propietarios</a></li>
-        <li class="navbar__item"><a href="#">Universo BMW</a></li>
-      </ul>
-    </nav>
 
-    <div class="yoquese">
-      <div class="header__right">
-        <img class="header__icon" src="img/icon_loupe_white.png"/>
-        <img class="header__icon" src="img/icon_profile_white.png"/>
-        <img class="header__icon" src="img/icon_location_white.png"/>
-        <img class="header__icon" src="img/icon_carrito_white.png"/>
-        <img class="header__icon" src="img/BMW_White_Logo.svg">
+    <div class="navbar">
+
+      <nav>
+        <ul class="navbar__lista">
+          <li class="navbar__item"><a href="#">Modelos</a></li>
+          <li class="navbar__item"><a href="#">Promociones</a></li>
+          <li class="navbar__item"><a href="#">Servicios</a></li>
+          <li class="navbar__item"><a href="#">Propietarios</a></li>
+          <li class="navbar__item"><a href="#">Universo BMW</a></li>
+        </ul>
+      </nav>
+      <div>
+        <div class="navbar__right">
+          <img class="header__icon" src="img/icon_loupe_white.png"/>
+          <img class="header__icon" src="img/icon_profile_white.png"/>
+          <img class="header__icon" src="img/icon_location_white.png"/>
+          <img class="header__icon" src="img/icon_carrito_white.png"/>
+          <img class="header__icon--logo" src="img/BMW_White_Logo.svg">
+        </div>
       </div>
-    </div>  
+    </div>
+   
 
     <div class="titulo">
       <h1>TU BMW CON DISPONIBILIDAD INMEDIATA</h1>
