--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <header class="header">
 
-    
     <div class="header_top">
 
       <div class="header_navbar">
@@ -37,7 +36,9 @@
       </div>
     </div>
   
-     
+    <div class="linea__header"></div>
+
+
     <div class="header_bottom">
       <h1>TU BMW CON DISPONIBILIDAD INMEDIATA</h1>
       <p>VEHÍCULOS NUEVOS EN STOCK</p>
