--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"/>
-    <title>BMW España - Web Oficial</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css" />
+  <title>BMW España - Web Oficial</title>
 </head>
+
 <body>
 
   <header class="header">
@@ -24,24 +26,24 @@
           </ul>
         </nav>
       </div>
-    
+
       <div class="header_right">
         <div class="iconos">
-          <img class="header__icon" src="img/icon_loupe_white.png"/>
-          <img class="header__icon" src="img/icon_profile_white.png"/>
-          <img class="header__icon" src="img/icon_location_white.png"/>
-          <img class="header__icon" src="img/icon_carrito_white.png"/>
+          <img class="header__icon" src="img/icon_loupe_white.png" />
+          <img class="header__icon" src="img/icon_profile_white.png" />
+          <img class="header__icon" src="img/icon_location_white.png" />
+          <img class="header__icon" src="img/icon_carrito_white.png" />
           <img class="header__icon--logo" src="img/BMW_White_Logo.svg">
         </div>
       </div>
     </div>
-  
+
     <div class="linea__header"></div>
 
 
     <div class="header_bottom">
       <h1>TU BMW CON DISPONIBILIDAD INMEDIATA</h1>
-      <p>VEHÍCULOS NUEVOS EN STOCK</p>
+      <p class="subtitulo">VEHÍCULOS NUEVOS EN STOCK</p>
       <button>Descúbrelo</button>
     </div>
 
@@ -49,7 +51,235 @@
 
   </header>
 
+  <main>
 
-    
+    <div>
+      <p class="series__texto">Series</p>
+    </div>
+
+    <div class="test">
+      <p class="cabrio">Cabrio</p>
+      <div class="modelos">
+        <p class="model">Berlina</p>
+        <p class="model">Compacto</p>
+        <p class="model">Coupe</p>
+        <p class="model">BMWi</p>
+        <p class="model">Todocamino</p>
+        <p class="model">Touring</p>
+        <p class="model">Roadster</p>
+      </div>
+    </div>
+
+    <div class="bloque01">
+      <div class="bloque01__container">
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche" src="img/bmw03.jpeg" />
+          <div class="coche__texto">
+            <p class="coche__texto--titulo">BMW Serie 2 Cabrio</p>
+            <p class="coche__texto--precio">Desde 28000€</p>
+            <p class="coche__texto--negrita">Configuar</p>
+            <p class="coche__texto--negrita">Explorar</p>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+    <div class="bloque02">
+      <div class="bloque02__container">
+        <div class="coche__container">
+          <img class="coche__img" src="img/bmw_home01.jpg">
+          <div class="bloque02__texto">
+            <p class="bloque02__texto01--titular">Visita virtual BMW</p>
+            <p class="bloque02__texto02--cuerpo">Nuestro experto BMW te mostrará todos los detalles en tu pantall de
+              forma
+              gratuita</p>
+            <p class="bloque02__texto03">Contacta en directo</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche__img" src="img/bmw_home03.jpg">
+          <div class="bloque02__texto">
+            <p class="bloque02__texto01--titular">Vehículos nuevos en stock</p>
+            <p class="bloque02__texto02--cuerpo">Tu BMW con disponibilidad inmediata</p>
+            <p class="bloque02__texto03">Contacta en directo</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche__img" src="img/bmw_home04.jpg">
+          <div class="bloque02__texto">
+            <p class="bloque02__texto01--titular">Vehículos de ocasión</p>
+            <p class="bloque02__texto02--cuerpo">BMW premium selection, casi nuevo, kilómetro cero.</p>
+            <p class="bloque02__texto03">Contacta en directo</p>
+          </div>
+        </div>
+
+        <div class="coche__container">
+          <img class="coche__img" src="img/bmw_home05.jpg">
+          <div class="bloque02__texto">
+            <p class="bloque02__texto01--titular">CITA ONLINE TALLER</p>
+            <p class="bloque02__texto02--cuerpo">Y ahora solo por pedir tu cita online, llévate de regalo un llavero de
+              BMW(hasta fin de existencias).</p>
+            <p class="bloque02__texto03">Contacta en directo</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bloque03">
+        <div class="bloque03__left">
+          <img class="img__bloque03" src="img/bmw_bloque03.jpeg">
+          <p class="bloque03__texto01">Categorías Vehículos BMW</p>
+          <p class="bloque03__texto02">Más información</p>
+        </div>
+        <div class="bloque03__right">
+          <img class="img__bloque03--youtube" src="img/bmw__youtube.png">
+          <p class="bloque03__texto01">Todo BMW en Youtube</p>
+          <p>Youtube BMW España</p>
+        </div>
+
+      </div>
+
+  </main>
+
+  <footer class="footer">
+      <div class="footer_parte01">
+        <p class="footer__categoria">Contacto</p>
+        <p class="footer__item">Prueba</p>
+        <p class="footer__item">Oferta</p>
+        <p class="footer__item">Cita online taller</p>
+        <p class="footer__item">Contáctanos</p>
+        <p class="footer__item">Visita virtual</p>
+        <p class="footer__item">Trabaja con nosotros</p>
+      </div>
+
+      <div class="footer_parte01">
+        <p class="footer__categoria">Mundo BMW</p>
+        <p class="footer__item">Prueba</p>
+        <p class="footer__item">FAQ</p>
+        <p class="footer__item">BMW group</p>
+        <p class="footer__item">Contáctanos</p>
+        <p class="footer__item">BMW Movilidad sostenible</p>
+        <p class="footer__item">Trabaja con nosotros</p>
+      </div>
+
+      <div class="footer_parte01">
+        <p class="footer__categoria">Gama BMW</p>
+        <p class="footer__item">Prueba</p>
+        <p class="footer__item">Oferta</p>
+        <p class="footer__item">Cita online taller</p>
+        <p class="footer__item">Contáctanos</p>
+        <p class="footer__item">Visita virtual</p>
+        <p class="footer__item">Trabaja con nosotros</p>
+      </div>
+
+      <div class="footer_parte01">
+        <p class="footer__categoria">Síguenos en</p>
+        <p class="footer__item">Facebook</p>
+        <p class="footer__item">Twitter</p>
+        <p class="footer__item">Instagram</p>
+        <p class="footer__item">Youtube</p>
+      </div>
+
+
+
+
+  </footer>
+
+
+
 </body>
+
 </html>
